[package]
name = "rusttcp"
version = "0.1.0"
edition = "2021"
description = "A TCP implementation in Rust"
readme = "README.md"
authors = ["Maxime Guillard <guillama.git@gmail.com>"]
keywords = ["tcp", "stack", "network"]

[dependencies]
tun = "0.6.1"
etherparse = "0.15"
log = "0.4.22"
env_logger = "0.11.5"
ctor = "0.2.8"

[features]
mocks = []

[dev-dependencies]
rusttcp = { path = ".", features = ["mocks"] }
